@@ -1,5 +1,8 @@
 2011-09-21  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
+	* message.el (message-default-send-rename-function): Break out into its
+	own function.
+
 	* ecomplete.el (ecomplete-display-matches): Revert patch since it
 	doesn't work under XEmacs.
 
